--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@ Web Developer<br>
     <p>JavaScript AJAX jQuery JSON AngularJS</p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-        aria-valuemin="0" aria-valuemax="100" style="width:70%">
-          70% Complete
+        aria-valuemin="0" aria-valuemax="100" style="width:60%">
+          60% Complete
         </div>
       </div>
     <p>PHP SQL Java Node.js</p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-        aria-valuemin="0" aria-valuemax="100" style="width:75%">
-          75% Complete
+        aria-valuemin="0" aria-valuemax="100" style="width:55%">
+          55% Complete
         </div>
       </div>
     <p>XML</p>
@@ -93,7 +93,7 @@ Web Developer<br>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:70%">
-          80% Complete
+          70% Complete
         </div>
       </div>
       <p>Ubuntu, Mac, Windows</p>
@@ -119,10 +119,10 @@ Web Developer<br>
       <i class="fa fa-circle-thin fa-stack-2x"></i>
       <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color:#006400"></i>
     </span>
-   <b>Hobbies</b><p></p>
-    <p>Photography</p>
-    <p>Travel</p>
-    <br>
+   <b>Currently Focusing On</b><p></p>
+    <p>Python and Django</p>
+	<p>Building website using Django</p>
+      <hr>
       </div>
     <!-- End Left Column -->
     </div>
