--- a/index.html
+++ b/index.html
@@ -108,21 +108,22 @@ Web Developer<br>
       <i class="fa fa-circle-thin fa-stack-2x"></i>
       <i class="fa fa-language fa-spin fa-stack-1x" style="color:#006400"></i>
     </span>
+	<!-- Currently Focused On -->
+    <span class="fa-stack">
+      <i class="fa fa-circle-thin fa-stack-2x"></i>
+      <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color:#006400"></i>
+    </span>
+   <b>Currently Focused On</b><p></p>
+    <p>Python and Django</p>
+	<p>Building website using Django</p>
+      <hr>
     <!-- Languages -->
    <b>Languages</b><p></p>
     <p>English</p>
     <p>Nepali</p>
     <p>Hindi</p>
     <hr>
-    <!-- Hobbies -->
-    <span class="fa-stack">
-      <i class="fa fa-circle-thin fa-stack-2x"></i>
-      <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color:#006400"></i>
-    </span>
-   <b>Currently Focusing On</b><p></p>
-    <p>Python and Django</p>
-	<p>Building website using Django</p>
-      <hr>
+    
       </div>
     <!-- End Left Column -->
     </div>
@@ -175,10 +176,10 @@ Web Developer<br>
     <p>Physics, Chemistry, Biology & Mathematics</p><br>
 
     <h2><i class="fa fa-cubes" style="color: #006400"></i> Personal Projects</h2><hr>
-    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" style="color:black"> Linux Chats Q&A Blogs built using Wordpress as CMS</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" style="color:black"> Linux Chats Q&A Blogs built using Wordpress as CMS</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" style="color:black"> Linux Chats Q&A Blogs built using Wordpress as CMS</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" style="color:black"> Linux Chats Q&A Blogs built using Wordpress as CMS</a>
+    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" style="color:black"> Linux Chats Website built using Wordpress as CMS</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" style="color:black">My Github Account For Current Projects</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="#" style="color:black">Django Powered Website Coming Soon!</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" style="color:black">My Codepen.io Account</a>
      </div>
     </div>
   </div>
