--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Web Developer<br>
     </span>
    <b>Currently Focused On</b><p></p>
     <p>Python and Django</p>
-	<p>Building website using Django</p>
+	<p>Building Website using Django</p>
       <hr>
     <!-- Languages -->
 	<span class="fa-stack">
@@ -176,10 +176,10 @@ Web Developer<br>
     <p>Physics, Chemistry, Biology & Mathematics</p><br>
 
     <h2><i class="fa fa-cubes" style="color: #006400"></i> Personal Projects</h2><hr>
-    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" style="color:black"> Linux Chats Website built using Wordpress as CMS</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" style="color:black">My Github Account For Current Projects</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="#" style="color:black">Django Powered Website Coming Soon!</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" style="color:black">My Codepen.io Account</a>
+    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" style="color:black"> My Linux Chats Website built using Wordpress as CMS</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" style="color:black"> My Github Account For Current Projects</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="#" style="color:black"> Django Powered Website Coming Soon!</a><br>
+    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" style="color:black"> My Codepen.io Account</a>
      </div>
     </div>
   </div>
