--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@ Web Developer<br>
       </span>
       <b>My Skills</b>
        <p></p>
-    <p>HTML CSS Bootstrap W3.CSS </p>
+    <p>HTML, CSS, Bootstrap, W3.CSS </p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:90%">
           90% Complete
         </div>
       </div>
-    <p>JavaScript AJAX jQuery JSON AngularJS</p>
+    <p>JavaScript, AJAX, jQuery, AngularJS</p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:60%">
           60% Complete
         </div>
       </div>
-    <p>PHP SQL Java Node.js</p>
+    <p>PHP, SQL</p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:55%">
@@ -89,7 +89,7 @@ Web Developer<br>
           70% Complete
         </div>
       </div>
-    <p>WordPress, Drupal & Other Developer Tools</p>
+    <p>WordPress, Drupal, IDEs & Other Developer Tools</p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -111,7 +111,7 @@ Web Developer<br>
     </span>
    <b>Currently Focused On</b><p></p>
     <p>Python and Django</p>
-	<p>Building Website using Django</p>
+	<p>Building Websites using Django</p>
       <hr>
     <!-- Languages -->
 	<span class="fa-stack">
