--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@ Web Developer<br>
           55% Complete
         </div>
       </div>
-    <p>XML</p>
+    <p>XML, JSON</p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:70%">
           70% Complete
         </div>
       </div>
-    <p>WordPress, Drupal, IDEs & Other Developer Tools</p>
+    <p>WordPress, Drupal, IDEs, Git & Other Dev Tools</p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:70%">
