--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@ Web Developer<br>
 
     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
     <h6 ><i class="fa fa-calendar "></i><span> July 2017 - Current</span></h6>
-    <p>Worked on troubleshooting software and hardware issues on iPhones, Macs, Apple Watches, Beats and accessories. Carefully followed Apple Internal Use Only articles. Worked with system folders and gained familarity on functions/features of listed Apple products.</p>
+    <p>Worked on troubleshooting software and hardware issues on iPhones, Macs, Apple Watches, Beats and accessories. Carefully followed Apple Internal Use Only articles. Worked with system folders and gained familarity on functions/features of listed Apple products. Reported bugs and customer's complaints.</p>
     <hr>
 
-    <h5><b>United Health Group - Web Developer - Short Term Contract</b></h5>
+    <h5><b>United Health Group - Web Developer - Short-Term IT Contract Job</b></h5>
     <h6 ><i class="fa fa-calendar "></i>  <span> Feb 2017 - Apr 2017</span></h6>
     <p>Worked under agile methodology on redesigning old website while waiting on a new project to arrive and work. Grabbed knowledge about real web development tasks, recreated assigned pages, tested SQL queries and worked with QA team. Learned about Spring framework, Stage/Production server & other web development/deployment  tools. </p>
     <hr>
