--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Web Developer<br>
           70% Complete
         </div>
       </div>
-    <p>WordPress, Drupal, IDEs, Git & Other Dev Tools</p>
+    <p>WordPress, IDEs, Git, Cisco R&S, Other Dev Tools</p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:70%">
