--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Web Developer<br>
 
     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
     <h6 ><i class="fa fa-calendar "></i><span> July 2017 - Current</span></h6>
-    <p>Worked on troubleshooting software and hardware issues on iPhones, Macs, Apple Watches, Beats and accessories. Carefully followed Apple Internal Use Only articles. Worked with system folders and gained familarity on functions/features of listed Apple products. Reported bugs and customer's complaints.</p>
+    <p>Worked on troubleshooting software and hardware issues on iPhones, Macs, Apple Watches, Beats and accessories. Carefully followed Apple Internal Use Only articles. Worked with system folders and gained familarity on functions/features of listed Apple products. Reported new updates bugs and customer's complaints.</p>
     <hr>
 
     <h5><b>United Health Group - Web Developer - Short-Term IT Contract Job</b></h5>
