--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Web Developer<br>
         <i class="fa fa-circle-thin fa-stack-2x"></i>
         <i class="fa fa-linkedin fa-stack-1x" style="color:#006400"></i>
       </span></a><p></p>
-	  
+	  <p><b>A STONE</b> IS BROKEN BY THE LAST STROKE OF HAMMER.THIS DOESN'T MEAN THAT THE FIRST STROKE WAS USELESS. SUCCESS IS THE RESULT OF PERSISTENT EFFORT.</p>
     <p>Thank you for your precious time !</p>
 	
 
