--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
 <style>
   html,
   body,
-  h1,
   h2,
   h3,
-  h4,
-  h5,
   h6 {
     font-family:"Roboto", sans-serif;
 	
@@ -38,7 +35,9 @@
     <div class="col-sm-4 ">
       <div class="well">
     <img src="test.jpg" class="img-responsive img-rounded" alt="Avatar">
+	<p><center><a href="index2.html" class="btn btn-success" role="button">Please Click Here To Access My Web Resume</a></center></p>
     <h3>Sachin Rajbhandari</h3>
+	
    <span class="fa-stack">
   <i class="fa fa-circle-thin fa-stack-2x"></i>
   <i class="fa fa-briefcase fa-stack-1x" style="color:#006400"></i>
@@ -62,11 +61,11 @@ Web Developer<br>
       </span>
       <b>My Skills</b>
        <p></p>
-    <p>HTML, CSS, Bootstrap, W3.CSS </p>
+    <p>HTML, CSS, Bootstrap 4, Django </p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-        aria-valuemin="0" aria-valuemax="100" style="width:90%">
-          90% Complete
+        aria-valuemin="0" aria-valuemax="100" style="width:80%">
+          80% Complete
         </div>
       </div>
     <p>JavaScript, AJAX, jQuery, AngularJS</p>
@@ -97,11 +96,11 @@ Web Developer<br>
           70% Complete
         </div>
       </div>
-      <p>Ubuntu, Mac, Windows</p>
+      <p>Ubuntu, Mac, Windows, RHEL</p>
     <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-        aria-valuemin="0" aria-valuemax="100" style="width:90%">
-          90% Complete
+        aria-valuemin="0" aria-valuemax="100" style="width:80%">
+          80% Complete
         </div>
       </div>
       <hr>
