--- a/index2.html
+++ b/index2.html
@@ -148,7 +148,7 @@
               <h1>Sachin R.</h1>
               <h1>sachink.rb@gmail.com</h1>
 
-              <center><h2>{ Coding gets me going every morning } [ 'myGoal' ] { To learn at least one cool thing everyday }</h2></center>
+              <h2>{ Coding gets me going every morning } [ 'myGoal' ] { To learn at least one cool thing everyday }</h2>
             </header>
             <div class="resume-frame-2">
               <section class="resume-frame-3">
