--- a/index2.html
+++ b/index2.html
@@ -164,6 +164,7 @@
                     <li>BootStrap 4</li>
                     <li>PostgreSQL</li>
                     <li>PHP</li>
+                    <li>Java</li>
                     <li>WAMP & XAMPP</li>
                     <li>Git / GitHub</li>
                   </ul>
@@ -212,7 +213,7 @@
                   <ul>
                     <li>Ubuntu</li>
                     <li>MacOS, OS X & iOS</li>
-                    <li>Windows XP, 7, 8 & 10</li>
+                    <li>Windows XP, Vista, 7, 8 & 10</li>
                     <li>RHEL OS</li>
                     <li>CentOS</li>
                   </ul>
