--- a/index2.html
+++ b/index2.html
@@ -65,7 +65,7 @@
     }
 
     .resume-frame-1 header {
-      background: #e66565;
+      background: #006400;
       color: #fff;
       display: flex;
       align-items: flex-end;
@@ -93,18 +93,18 @@
       writing-mode: vertical-lr;
       transform: rotate(180deg);
       grid-area: title;
-      background: #e66565;
+      background: #006400;
       color: #fff;
       text-align: center;
       border: 2.5px solid #fff
     }
 
     .resume-frame-1 .resume-frame-2 section article hgroup {
-      border-bottom: 1px solid #e66565
+      border-bottom: 1px solid #006400
     }
 
     .resume-frame-1 .resume-frame-2 section article hgroup h1 {
-      color: #e66565
+      color: #006400
     }
 
     .resume-frame-1 .resume-frame-2 section article hgroup p:before {
@@ -166,11 +166,12 @@
                     <li>PHP</li>
                     <li>Java</li>
                     <li>WAMP & XAMPP</li>
-                    <li>Git / GitHub</li>
+                    <li>Git & GitHub</li>
                   </ul>
-                 <ul><li>HTML [Forms, Graphics, Media, APIs, HTML5]</li></ul>
-                 <ul><li>CSS [Float, Flexbox, Grid, Animations, Responsive]</li></ul>
-                 <ul><li>JavaScript [Forms, Objects, Functions, HTML DOM, Browser BOM, AJAX, JSON, JS vs jQuery]</li></ul>
+                 <ul><li>HTML [ Forms, Graphics, Media, APIs, HTML5 ]</li></ul>
+                 <ul><li>CSS [ Float, Flexbox, Grid, Animations, Responsive ]</li></ul>
+                 <ul><li>JavaScript  Forms, Objects, Functions, HTML DOM, Browser BOM, AJAX, JSON, JS vs jQuery ]</li></ul>
+                 <ul><li>Colors [ www.colorhexa.com ]</li></ul>
                 </div>
 
                 <div>
