--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@ Web Developer<br>
     <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> My Linux Chats Website built using Wordpress as CMS</a><br>
     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
     <i class="fa fa-check-circle-o"></i><a href="#" style="color:black"> Django Powered Website Coming Soon!</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a>
+    <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a><br>
+	<i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> My Web Resume Link Here</a><br><br>
      </div>
     </div>
   </div>
