--- a/index.html
+++ b/index.html
@@ -40,65 +40,65 @@
 	
    <span class="fa-stack">
   <i class="fa fa-circle-thin fa-stack-2x"></i>
-  <i class="fa fa-briefcase fa-stack-1x" style="color:#006400"></i>
+  <i class="fa fa-briefcase fa-stack-1x" style="color: #5ABA5A"></i>
 </span>
 Web Developer<br>
 <span class="fa-stack">
     <i class="fa fa-circle-thin fa-stack-2x"></i>
-    <i class="fa fa-envelope fa-stack-1x" style="color:#006400"></i>
+    <i class="fa fa-envelope fa-stack-1x" style="color: #5ABA5A"></i>
   </span>
   sachink.rb@gmail.com<br>
     <span class="fa-stack">
   <i class="fa fa-circle-thin fa-stack-2x"></i>
-  <i class="fa fa-phone fa-stack-1x" style="color:#006400"></i>
+  <i class="fa fa-phone fa-stack-1x" style="color: #5ABA5A"></i>
 </span>
 903-357-8963<br>
     <hr>
 <!-- My Skills -->
     <span class="fa-stack">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-cog fa-spin fa-stack-1x" style="color:#006400"></i>
+        <i class="fa fa-cog fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
       </span>
       <b>My Skills</b>
        <p></p>
     <p>HTML, CSS, Bootstrap 4, Django </p>
     <div class="progress">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:80%">
           80% Complete
         </div>
       </div>
     <p>JavaScript, AJAX, jQuery, AngularJS</p>
     <div class="progress">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:60%">
           60% Complete
         </div>
       </div>
     <p>PHP, SQL</p>
     <div class="progress">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:55%">
           55% Complete
         </div>
       </div>
     <p>XML, JSON</p>
     <div class="progress">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:70%">
           70% Complete
         </div>
       </div>
     <p>WordPress, IDEs, Git, Cisco R&S, Other Dev Tools</p>
     <div class="progress">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:70%">
           70% Complete
         </div>
       </div>
       <p>Ubuntu, Mac, Windows, RHEL</p>
     <div class="progress">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40"
         aria-valuemin="0" aria-valuemax="100" style="width:80%">
           80% Complete
         </div>
@@ -107,7 +107,7 @@ Web Developer<br>
 	<!-- Currently Focused On -->
     <span class="fa-stack">
       <i class="fa fa-circle-thin fa-stack-2x"></i>
-      <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color:#006400"></i>
+      <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
     </span>
    <b>Currently Focused On</b><p></p>
     <p>Python and Django</p>
@@ -116,7 +116,7 @@ Web Developer<br>
     <!-- Languages -->
 	<span class="fa-stack">
       <i class="fa fa-circle-thin fa-stack-2x"></i>
-      <i class="fa fa-language fa-spin fa-stack-1x" style="color:#006400"></i>
+      <i class="fa fa-language fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
     </span>
    <b>Languages</b><p></p>
     <p>English</p>
@@ -133,7 +133,7 @@ Web Developer<br>
    <div class="col-sm-8">
      <div class="well">
      
-    <h2 ><i class="fa fa-suitcase" style="color: #006400"></i> Work Experience</h2><hr>
+    <h2 ><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h2><hr>
 
     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
     <h6 ><i class="fa fa-calendar "></i><span> Jul 2017 - Current</span></h6>
@@ -158,7 +158,7 @@ Web Developer<br>
 
 
 
-    <h2><i class="fa fa-graduation-cap" style="color: #006400"></i> Education</h2><hr>
+    <h2><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h2><hr>
 
     <h5><b>Online Learning</b></h5>
     <h6 ><i class="fa fa-calendar "></i> Forever</h6>
@@ -175,7 +175,7 @@ Web Developer<br>
     <h6><i class="fa fa-calendar"></i> 2002 - 2004</h6>
     <p>Physics, Chemistry, Biology & Mathematics</p><br>
 
-    <h2><i class="fa fa-cubes" style="color: #006400"></i> Personal Projects</h2><hr>
+    <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Personal Projects</h2><hr>
     <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> My Linux Chats Website built using Wordpress as CMS</a><br>
     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
     <i class="fa fa-check-circle-o"></i><a href="#" style="color:black"> Django Powered Website Coming Soon!</a><br>
@@ -190,27 +190,27 @@ Web Developer<br>
     <p><i class="fa fa-thumbs-o-up"></i> Find me on social media <i class="fa fa-thumbs-o-down"></i></p>
     <a href="https://www.facebook.com" target="_blank"><span class="fa-stack fa-lg">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-facebook-official fa-stack-1x" style="color:#006400"></i>
+        <i class="fa fa-facebook-official fa-stack-1x" style="color: #5ABA5A"></i>
       </span></a>
     <a href="https://www.instagram.com" target="_blank"><span class="fa-stack fa-lg">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-instagram fa-stack-1x" style="color:#006400"></i>
+        <i class="fa fa-instagram fa-stack-1x" style="color: #5ABA5A"></i>
       </span></a>
     <a href="https://www.snapchat.com" target="_blank"><span class="fa-stack fa-lg">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-snapchat fa-stack-1x" style="color:#006400"></i>
+        <i class="fa fa-snapchat fa-stack-1x" style="color: #5ABA5A"></i>
       </span></a>
     <a href="https://www.pinterest.com" target="_blank"><span class="fa-stack fa-lg">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-pinterest-p fa-stack-1x" style="color:#006400"></i>
+        <i class="fa fa-pinterest-p fa-stack-1x" style="color: #5ABA5A"></i>
       </span></i></a>
     <a href="https://www.twitter.com" target="_blank"><span class="fa-stack fa-lg">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-twitter fa-stack-1x" style="color:#006400"></i>
+        <i class="fa fa-twitter fa-stack-1x" style="color: #5ABA5A"></i>
       </span></a>
     <a href="#"><span class="fa-stack fa-lg">
         <i class="fa fa-circle-thin fa-stack-2x"></i>
-        <i class="fa fa-linkedin fa-stack-1x" style="color:#006400"></i>
+        <i class="fa fa-linkedin fa-stack-1x" style="color: #5ABA5A"></i>
       </span></a><p></p>
 	  <p><b>A STONE</b> IS BROKEN BY THE LAST STROKE OF HAMMER.THIS DOESN'T MEAN THAT THE FIRST STROKE WAS USELESS. SUCCESS IS THE RESULT OF PERSISTENT EFFORT.</p>
     <p>Thank you for your precious time !</p>
