--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,9 @@
   <meta charSet="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <style>
     html {
       font-size: 16px;
@@ -65,7 +68,7 @@
     }
 
     .resume-frame-1 header {
-      background: #006400;
+      background: #03ACEF;
       color: #fff;
       display: flex;
       align-items: flex-end;
@@ -93,18 +96,18 @@
       writing-mode: vertical-lr;
       transform: rotate(180deg);
       grid-area: title;
-      background: #006400;
+      background: #03ACEF;
       color: #fff;
       text-align: center;
       border: 2.5px solid #fff
     }
 
     .resume-frame-1 .resume-frame-2 section article hgroup {
-      border-bottom: 1px solid #006400
+      border-bottom: 1px solid #03ACEF
     }
 
     .resume-frame-1 .resume-frame-2 section article hgroup h1 {
-      color: #006400
+      color: #03ACEF
     }
 
     .resume-frame-1 .resume-frame-2 section article hgroup p:before {
@@ -133,6 +136,21 @@
     .resume-frame-1 .resume-frame-2 .resume-frame-3 h2 {
       font-size: 1.25em
     }
+
+    .button1 {
+  background-color: #03ACEF;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 21px;
+  margin: 4px 2px;
+  font-family: Poiret One;
+  cursor: pointer;
+}
+    
   </style>
   
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One" rel="stylesheet" />
@@ -141,6 +159,7 @@
 <body>
     <div style="outline:none" tabindex="-1" role="group">
       <div id="page">
+        <center><a class = "button1" href="https://sachinkrb.github.io/" ><b>Back to Main Page</b></a></center>
         
         <main id="container">
           <div class="resume-frame-1">
