--- a/index2.html
+++ b/index2.html
@@ -247,7 +247,7 @@
                   <h1>Personal Tiny Creative Works & Workshops</h1>
                   </hgroup>
                   <div>
-                    Here lies my remains of what I have practiced & created:
+                   <b>Here lies my remains of what I have practiced & created:</b>
                   </div>
                   
                   <ul>
