--- a/index2.html
+++ b/index2.html
@@ -159,7 +159,10 @@
 <body>
     <div style="outline:none" tabindex="-1" role="group">
       <div id="page">
-        <center><a class = "button1" href="https://sachinkrb.github.io/" ><b>Back to Main Page</b></a></center>
+        <center><a class = "button1" href="https://sachinkrb.github.io/" ><b>Back to Main Page</b></a>
+          <a class = "button1" href="Sachin's Resume.pdf" download><b>Download PDF version</b></a>
+
+        </center>
         
         <main id="container">
           <div class="resume-frame-1">
