--- a/index2.html
+++ b/index2.html
@@ -199,11 +199,11 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <div class="overlay-content">
             <a href="">RESUME</a>
-            <a href="#">HOME</a>
-            <a href="#">DOWNLOAD PDF VERSION</a>
+            <a href="https://sachinkrb.github.io/">HOME</a>
+            <a href="Sachin's Resume.pdf" download>DOWNLOAD PDF VERSION</a>
             <a href="#" onclick="viewSource()">VIEW PAGE SOURCE</a>
-            <a href="#">WORDPRESS PROJECT</a>
-            <a href="#">MY GITHUB</a>
+            <a href="https://linuxchats.com">WORDPRESS PROJECT</a>
+            <a href="https://github.com/sachinkrb">MY GITHUB</a>
           </div>
         </div>
 
@@ -215,7 +215,7 @@
               <h1>Sachin R.</h1>
               <h1>sachink.rb@gmail.com</h1>
 
-              <h2>{ Coding gets me going every morning } [ 'myGoal' ] { To learn at least one cool thing everyday }</h2>
+            <h2>{ Coding gets me going every morning } [ 'myGoal' ] { To learn at least one cool thing everyday }</h2>
             </header>
             <div class="resume-frame-2">
               <section class="resume-frame-3">
