--- a/index2.html
+++ b/index2.html
@@ -237,7 +237,7 @@
                   </ul>
                  <ul><li>HTML [ Forms, Graphics, Media, APIs, HTML5 ]</li></ul>
                  <ul><li>CSS [ Float, Flexbox, Grid, Animations, Responsive ]</li></ul>
-                 <ul><li>JavaScript  Forms, Objects, Functions, HTML DOM, Browser BOM, AJAX, JSON, JS vs jQuery ]</li></ul>
+                 <ul><li>JavaScript [ Forms, Objects, Functions, HTML DOM, Browser BOM, AJAX, JSON, JS vs jQuery ]</li></ul>
                  <ul><li>Colors [ www.colorhexa.com ]</li></ul>
                 </div>
 
