--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="col-sm-4 ">
       <div class="well">
     <img src="test.jpg" class="img-responsive img-rounded" alt="Avatar">
-	<p><center><a href="index2.html" class="btn btn-success" role="button">Please Click Here To Access My Web Resume</a></center></p>
+	<p><center><a href="index2.html" class="btn btn-success btn-block" role="button">Here is my Web Resume</a></center></p>
     <h3>Sachin Rajbhandari</h3>
 	
    <span class="fa-stack">
