--- a/index2.html
+++ b/index2.html
@@ -183,6 +183,10 @@
       }
     }
     
+    #myNav {
+      font-family: Poiret One;
+      font-weight: bolder;
+    }
   </style>
   
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One" rel="stylesheet" />
@@ -207,7 +211,7 @@
           </div>
         </div>
 
-        <span style="font-size:30px; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU</span>
+        <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU</span>
 
 
       <div class="resume-frame-1">
