--- a/index.html
+++ b/index.html
@@ -176,11 +176,13 @@ Web Developer<br>
     <p>Physics, Chemistry, Biology & Mathematics</p><br>
 
     <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Personal Projects</h2><hr>
+	
     <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> My Linux Chats Website built using Wordpress as CMS</a><br>
+	<i class="fa fa-check-circle-o"></i><a href="index3.html" style="color:black"> Working On a Prototype for Django Powered Website</a><br>
+	<i class="fa fa-check-circle-o"></i><a href="#" style="color:black"> Django Powered Website Coming Soon!</a><br>	
     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
-    <i class="fa fa-check-circle-o"></i><a href="#" style="color:black"> Django Powered Website Coming Soon!</a><br>
     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a><br>
-	<i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> My Web Resume Link Here</a><br><br>
+	<i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> My Web Resume Link Here</a><br>
      </div>
     </div>
   </div>
