--- a/index2.html
+++ b/index2.html
@@ -25,16 +25,16 @@
     h1,
     h2,
     nav a {
-      font-family: Poiret One, cursive
+      font-family: Poiret One, cursive;
     }
 
     img {
-      max-width: 100%
+      max-width: 100%;
     }
 
     #page {
       margin-top: 125px;
-      height: calc(100vh - 125px)
+      height: calc(100vh - 125px);
     }
 
     #container {
@@ -84,7 +84,7 @@
       display: grid;
       grid-column-gap: 10px;
       grid-template-columns: 40px 1fr;
-      grid-template-areas: "title role1" "title role2" "title role3" "title role4"
+      grid-template-areas: "title role1" "title role2" "title role3" "title role4";
     }
 
     .resume-frame-1 .resume-frame-2 section>h1 {
@@ -94,15 +94,15 @@
       background: #03ACEF;
       color: #fff;
       text-align: center;
-      border: 2.5px solid #fff
+      border: 2.5px solid #fff;
     }
 
     .resume-frame-1 .resume-frame-2 section article hgroup {
-      border-bottom: 1px solid #03ACEF
+      border-bottom: 1px solid #03ACEF;
     }
 
     .resume-frame-1 .resume-frame-2 section article hgroup h1 {
-      color: #03ACEF
+      color: #03ACEF;
     }
 
     .resume-frame-1 .resume-frame-2 section article hgroup p:before {
@@ -115,7 +115,7 @@
     .resume-frame-1 .resume-frame-2 section article hgroup p {
       display: inline-block;
       font-size: 1.25em;
-      font-family: Poiret One, cursive
+      font-family: Poiret One, cursive;
     }
 
     .resume-frame-1 .resume-frame-2 .resume-frame-3 ul {
@@ -125,7 +125,7 @@
       margin: 0 0 15px;
       list-style-position: inside;
       text-align: left;
-      font-size: .9em
+      font-size: .9em;
     }
 
     .resume-frame-1 .resume-frame-2 .resume-frame-3 h2 {
@@ -303,6 +303,7 @@
                   </div>
                   
                   <ul>
+                  	<li><a href="index3.html" style="color:black"> Working On a Prototype for Django Website </a></li>
                     <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Github powered Portfolio Website</a></li>
                     <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website built using Wordpress as CMS</a></li>
                     <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github Account For Current Projects</a></li>
