--- a/index3.html
+++ b/index3.html
@@ -92,7 +92,7 @@ p {
 }
 
 /* Active/current link */
-.navbar a.active {
+.navbar a:active {
   background-color: #666;
   color: white;
 }
@@ -102,29 +102,30 @@ p {
     display: none;
   }
   .navbar a.icon {
-    float: left;
-    display: block;
+    float: right;
+    display:block;
   }
 }
 
 @media screen and (max-width: 600px) {
   .navbar.responsive {position: relative;}
-  .navbar.responsive .icon {
+  .navbar.responsive .icon{
     position: absolute;
     right: 0;
     top: 0;
   }
+
   .navbar.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
-  .navbar .responsive {float: none;}
-  .navbar .responsive {position: relative;}
-  .navbar .responsive {
+  .navbar.responsive {float: none;}
+  .navbar.responsive {position: relative;}
+  .navbar.responsive {
     display: block;
     width: 100%;
-    text-align: left;
+    text-align: right;
   }
 }
 
@@ -183,13 +184,7 @@ background-image: url("images/debut_light.png");
   }
 }
 
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    width: 100%;
-  }
-}
+
 </style>
 </head>
 <body>
